# manini

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-image.yml  test.yml
src/: ecs_service_scaler.rs  lib.rs  main.rs  proxy_service.rs  service_scaler.rs  waiting.html
