[package]
name = "manini"
version = "0.1.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.48.0"
aws-sdk-ec2 = "0.18.0"
aws-sdk-ecs = "0.18.0"
clap = { version = "3.2.22", features = ["derive", "env"] }
env_logger = "0.9.0"
futures = { version = "0.3.24", default-features = false, features = ["std", "async-await"] }
http = "0.2.8"
hyper = { version = "0.14", features = ["client", "server", "http1", "runtime"] }
log = "0.4"
memchr = "2.5.0"
tokio = { version = "1", features = ["full"] }
