[package]
name = "manini"
version = "0.2.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
edition = "2024"
repository = "https://github.com/azyobuzin/manini"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.169.0"
aws-sdk-ecs = "1.97.0"
clap = { version = "4.5.48", features = ["derive", "env"] }
env_logger = "0.11.8"
futures = { version = "0.3.24", default-features = false, features = ["std", "async-await"] }
http = "0.2.8"
hyper = { version = "0.14", features = ["client", "server", "http1", "runtime"] }
log = "0.4"
memchr = "2.5.0"
tokio = { version = "1.21", features = ["rt", "io-util", "net", "time", "macros", "sync"] }

[profile.release]
lto = true
panic = "abort"
