[package]
name = "manini"
version = "0.2.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
edition = "2024"
repository = "https://github.com/azyobuzin/manini"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.169.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ecs = { version = "1.97.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
env_logger = "0.11.8"
futures-util = { version = "0.3.31", default-features = false }
http = "1.3.1"
hyper = { version = "1.7.0", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.17", features = ["client-legacy", "server", "http1", "tokio"] }
http-body-util = "0.1.3"
log = "0.4"
memchr = "2.5.0"
pin-project-lite = "0.2.16"
tokio = { version = "1.21", features = ["rt", "io-util", "net", "time", "macros", "sync"] }

[profile.release]
lto = true
panic = "abort"
